[tool.poetry]
name = "python-sandbox"
version = "0.1.0"
description = ""
authors = ["Soichi Sumi <soichi.sumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
line-profiler = "^3.3.0"

[tool.poetry.dev-dependencies]
line-profiler = "^3.3.0"
pprofile = "^2.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
